VERB_HAVE, NOUN_WALLET und NOUN_GOLD_PIECES

--- a/src/Makefile
+++ b/src/Makefile
@@ -739,6 +739,8 @@ german.h: generate_german.rb
 	rm -f german.h
 	ruby generate_german.rb >german.h
 german.o: german.c german.h
+german_test: german_test.c german.o german.h
+	$(CC) $(CFLAGS) german_test.c -lcheck -o german_test german.o
 hack.o: hack.c $(HACK_H)
 hacklib.o: hacklib.c $(HACK_H)
 invent.o: invent.c $(HACK_H)
