--- a/sys/winnt/Makefile.cyg
+++ b/sys/winnt/Makefile.cyg
@@ -42,9 +42,9 @@ GRAPHICAL = Y
 
 DEBUG = Y
 
-cc     = gcc
-rc     = windres
-link   = gcc
+cc     = mingw32-gcc
+rc     = mingw32-windres
+link   = mingw32-gcc
 
 cflags = -mno-cygwin -isystem /usr/include/mingw 
 linkflags  = -mno-cygwin -L/usr/lib/mingw 
@@ -208,7 +208,7 @@ endif
 # macros. All builds include the base ones.
 #==========================================
 
-CFLAGSBASE  = -c $(cflags) -I$(INCL) $(WINPINC) $(cdebug)
+CFLAGSBASE  = -c $(cflags) -DGERMAN -I$(INCL) $(WINPINC) $(cdebug)
 LFLAGSBASEC = $(linkflags) $(linkdebug)
 LFLAGSBASEG = $(linkflags) $(linkdebug) -mwindows
 
@@ -333,11 +333,11 @@ SPLEVSRC       = $(U)lev_yacc.c  $(U)lev_$(LEX).c $(U)lev_main.c  $(U)panic.c
 
 DGNCOMPSRC     = $(U)dgn_yacc.c  $(U)dgn_$(LEX).c $(U)dgn_main.c
 
-MAKEOBJS       = $(O)makedefs.o $(O)monst.o $(O)objects.o
+MAKEOBJS       = $(O)makedefs.o $(O)mon-en.o $(O)obj-en.o
 
 SPLEVOBJS      = $(O)lev_yacc.o  $(O)lev_$(LEX).o $(O)lev_main.o \
 	$(O)alloc.o   $(O)decl.o      $(O)drawing.o \
-	$(O)monst.o   $(O)objects.o   $(O)panic.o
+	$(O)mon-en.o   $(O)obj-en.o   $(O)panic.o
 
 DGNCOMPOBJS    = $(O)dgn_yacc.o  $(O)dgn_$(LEX).o $(O)dgn_main.o \
 	$(O)alloc.o   $(O)panic.o
@@ -350,10 +350,10 @@ TILEFILES      = $(WSHR)/monsters.txt $(WSHR)/objects.txt $(WSHR)/other.txt
 # These are not invoked during a normal game build in 3.4.1
 #
 TEXT_IO        = $(O)tiletext.o  $(O)tiletxt.o   $(O)drawing.o \
-	$(O)decl.o    $(O)monst.o     $(O)objects.o
+	$(O)decl.o    $(O)mon-en.o     $(O)obj-en.o
 
 TEXT_IO32      = $(O)tilete32.o $(O)tiletx32.o $(O)drawing.o \
-	$(O)decl.o    $(O)monst.o     $(O)objects.o
+	$(O)decl.o    $(O)mon-en.o     $(O)obj-en.o
 
 GIFREADERS     = $(O)gifread.o   $(O)alloc.o $(O)panic.o
 GIFREADERS32   = $(O)gifrd32.o $(O)alloc.o $(O)panic.o
@@ -376,7 +376,7 @@ VOBJ09 = $(O)hacklib.o  $(O)invent.o   $(O)light.o    $(O)lock.o
 VOBJ10 = $(O)mail.o     $(O)makemon.o  $(O)mapglyph.o $(O)mcastu.o
 VOBJ11 = $(O)mhitm.o    $(O)mhitu.o    $(O)minion.o   $(O)mklev.o
 VOBJ12 = $(O)mkmap.o    $(O)mkmaze.o   $(O)mkobj.o    $(O)mkroom.o
-VOBJ13 = $(O)mon.o      $(O)mondata.o  $(O)monmove.o  $(O)monst.o
+VOBJ13 = $(O)mon.o      $(O)mondata.o  $(O)monmove.o  $(O)mon-en.o
 VOBJ14 = $(O)monstr.o   $(O)mplayer.o  $(O)mthrowu.o  $(O)muse.o
 VOBJ15 = $(O)music.o    $(O)o_init.o   $(O)objects.o  $(O)objnam.o
 VOBJ16 = $(O)options.o  $(O)pager.o    $(O)pickup.o   $(O)pline.o
@@ -391,6 +391,7 @@ VOBJ24 = $(O)trap.o     $(O)u_init.o   $(O)uhitm.o    $(O)vault.o
 VOBJ25 = $(O)vis_tab.o  $(O)vision.o   $(O)weapon.o   $(O)were.o
 VOBJ26 = $(O)wield.o    $(O)windows.o  $(O)wizard.o   $(O)worm.o
 VOBJ27 = $(O)worn.o     $(O)write.o    $(O)zap.o
+VOBJ28 = $(O)german.o   $(O)german_vocabulary.o
 
 DLBOBJ = $(O)dlb.o
 
@@ -399,12 +400,15 @@ TTYOBJ = $(O)topl.o     $(O)getline.o  $(O)wintty.o
 SOBJ   = $(O)winnt.o    $(O)pcsys.o      $(O)pcunix.o  \
 	$(SOUND) $(O)pcmain.o $(O)mapimail.o $(O)nhlan.o
 
+# the following .o's _must_ be made before any others (for makedefs)
+FIRSTOBJ = $(O)mon-en.o $(O)obj-en.o
+
 OBJS   = $(VOBJ01) $(VOBJ02) $(VOBJ03) $(VOBJ04) $(VOBJ05) \
 	$(VOBJ06) $(VOBJ07) $(VOBJ08) $(VOBJ09) $(VOBJ10) \
 	$(VOBJ11) $(VOBJ12) $(VOBJ13) $(VOBJ14) $(VOBJ15) \
 	$(VOBJ16) $(VOBJ17) $(VOBJ18) $(VOBJ19) $(VOBJ20) \
 	$(VOBJ21) $(VOBJ22) $(VOBJ23) $(VOBJ24) $(VOBJ25) \
-	$(VOBJ26) $(VOBJ27)
+	$(VOBJ26) $(VOBJ27) $(VOBJ28)
 
 WINPOBJ = $(WINPORT)
 
@@ -580,9 +584,9 @@ $(O)gamedir.tag:
 
 
 ifeq  "$(GRAPHICAL)" "Y"
-$(GAMEFILE) : $(ALLOBJ) $(NHRES) $(O)gamedir.tag
+$(GAMEFILE) : $(FIRSTOBJ) $(ALLOBJ) $(NHRES) $(O)gamedir.tag
 else
-$(GAMEFILE) : $(ALLOBJ) $(NHRES) $(O)gamedir.tag \
+$(GAMEFILE) : $(FIRSTOBJ) $(ALLOBJ) $(NHRES) $(O)gamedir.tag \
 	 $(GAMEDIR)/nhdefkey.dll $(GAMEDIR)/nh340key.dll $(GAMEDIR)/nhraykey.dll
 endif
 	echo Linking....
@@ -645,6 +649,32 @@ $(O)makedefs.o: $(CONFIG_H) $(INCL)/monattk.h $(INCL)/monflag.h $(INCL)/objclass
 	 $(U)makedefs.c
 	if [ ! -e $(O). ] ; then mkdir $(OBJ) ; fi
 	$(cc) $(CFLAGSU) -o$@ $(U)makedefs.c
+
+# dependencies for makedefs and its outputs, which the util
+# Makefile is responsible for keeping up to date
+#
+
+# special rules, to force update of makedefs, real dependencies should be
+# below in the 'make depend' output.
+#
+# I18N:  These are built with the -DENGLISH flag, producing versions of the
+# object files using the original English terms.  monst.o and objects.o are
+# built using the selected language.
+$(O)mon-en.o: monst.c $(CONFIG_H) ../include/permonst.h ../include/align.h \
+    ../include/monattk.h ../include/monflag.h ../include/monsym.h \
+    ../include/dungeon.h ../include/eshk.h ../include/vault.h \
+    ../include/epri.h ../include/color.h mon-en.h
+	if [ ! -e $(O). ] ; then mkdir $(OBJ) ; fi
+	$(CC) $(CFLAGS) -DENGLISH -c monst.c -o $(O)mon-en.o
+	rm -f $(MAKEDEFS)
+
+$(O)obj-en.o: objects.c $(CONFIG_H) ../include/obj.h ../include/objclass.h \
+    ../include/prop.h ../include/skills.h ../include/color.h \
+    obj-en.h
+	if [ ! -e $(O). ] ; then mkdir $(OBJ) ; fi
+	$(CC) $(CFLAGS) -DENGLISH -c objects.c -o $(O)obj-en.o
+	rm -f $(MAKEDEFS)
+
 
 
 #
@@ -1308,14 +1338,14 @@ $(O)monmove.o: monmove.c $(HACK_H) $(INCL)/mfndpos.h $(INCL)/artifact.h \
 $(O)monst.o: monst.c $(CONFIG_H) $(INCL)/permonst.h $(INCL)/align.h \
 		$(INCL)/monattk.h $(INCL)/monflag.h $(INCL)/monsym.h \
 		$(INCL)/dungeon.h $(INCL)/eshk.h $(INCL)/vault.h \
-		$(INCL)/epri.h $(INCL)/color.h
+		$(INCL)/epri.h $(INCL)/color.h mon-de.h
 $(O)mplayer.o: mplayer.c $(HACK_H)
 $(O)mthrowu.o: mthrowu.c $(HACK_H)
 $(O)muse.o: muse.c $(HACK_H) $(INCL)/edog.h
 $(O)music.o: music.c $(HACK_H) #interp.c
 $(O)o_init.o: o_init.c $(HACK_H) $(INCL)/lev.h
 $(O)objects.o: objects.c $(CONFIG_H) $(INCL)/obj.h $(INCL)/objclass.h \
-		$(INCL)/prop.h $(INCL)/skills.h $(INCL)/color.h
+		$(INCL)/prop.h $(INCL)/skills.h $(INCL)/color.h obj-de.h
 $(O)objnam.o: objnam.c $(HACK_H)
 $(O)options.o: options.c $(CONFIG_H) $(INCL)/objclass.h $(INCL)/flag.h \
 		$(HACK_H) $(INCL)/tcap.h
@@ -1365,5 +1395,14 @@ $(O)worm.o: worm.c $(HACK_H) $(INCL)/lev.h
 $(O)worn.o: worn.c $(HACK_H)
 $(O)write.o: write.c $(HACK_H)
 $(O)zap.o: zap.c $(HACK_H)
+
+$(O)german_vocabulary.c: generate_german.rb german_verb.rb
+	rm -f $(O)german_vocabulary.o
+	ruby generate_german.rb >german_vocabulary.c
+$(O)german_vocabulary.o: german_vocabulary.c german.h
+$(O)german.o: german.c german.h $(O)german_vocabulary.o
+$(O)german_test: german_test.c $(O)german.o $(O)german_vocabulary.o german.h
+	$(CC) -Wall $(CFLAGS) german_test.c -lcheck -o german_test german.o german_vocabulary.o
+$(O)german_wishing.o: german_wishing_test.c german.h
 
 # end of file
