--- a/win/win32/winhack.rc
+++ b/win/win32/winhack.rc
@@ -159,31 +159,31 @@ END
 
 IDD_PLAYER_SELECTOR DIALOG DISCARDABLE  0, 0, 152, 169
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "What are you?"
+CAPTION "Was bist du?"
 FONT 8, "MS Sans Serif"
 BEGIN
-    DEFPUSHBUTTON   "Play",IDOK,7,148,66,14
-    PUSHBUTTON      "Quit",IDCANCEL,79,148,66,14
+    DEFPUSHBUTTON   "Start",IDOK,7,148,66,14
+    PUSHBUTTON      "Abbrechen",IDCANCEL,79,148,66,14
     LTEXT           "Name:",IDC_STATIC,7,8,25,10
     EDITTEXT        IDC_PLSEL_NAME,40,7,105,12,ES_AUTOHSCROLL | ES_READONLY | 
                     NOT WS_TABSTOP
-    GROUPBOX        "Role",IDC_STATIC,7,21,138,30
-    CONTROL         "Random",IDC_PLSEL_ROLE_RANDOM,"Button",BS_AUTOCHECKBOX | 
+    GROUPBOX        "Klasse",IDC_STATIC,7,21,138,30
+    CONTROL         "Zufällig",IDC_PLSEL_ROLE_RANDOM,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,14,34,40,10
     COMBOBOX        IDC_PLSEL_ROLE_LIST,63,33,75,50,CBS_DROPDOWNLIST | 
                     WS_VSCROLL | WS_TABSTOP
-    GROUPBOX        "Race",IDC_STATIC,7,51,138,30
-    CONTROL         "Random",IDC_PLSEL_RACE_RANDOM,"Button",BS_AUTOCHECKBOX | 
+    GROUPBOX        "Volk",IDC_STATIC,7,51,138,30
+    CONTROL         "Zufällig",IDC_PLSEL_RACE_RANDOM,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,14,63,40,10
     COMBOBOX        IDC_PLSEL_RACE_LIST,63,62,75,45,CBS_DROPDOWNLIST | 
                     WS_VSCROLL | WS_TABSTOP
-    GROUPBOX        "Gender",IDC_STATIC,7,81,138,30
-    CONTROL         "Random",IDC_PLSEL_GENDER_RANDOM,"Button",
+    GROUPBOX        "Geschlecht",IDC_STATIC,7,81,138,30
+    CONTROL         "Zufällig",IDC_PLSEL_GENDER_RANDOM,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,14,93,40,10
     COMBOBOX        IDC_PLSEL_GENDER_LIST,63,92,75,40,CBS_DROPDOWNLIST | 
                     WS_VSCROLL | WS_TABSTOP
-    GROUPBOX        "Alignment",IDC_STATIC,7,111,138,30
-    CONTROL         "Random",IDC_PLSEL_ALIGN_RANDOM,"Button",BS_AUTOCHECKBOX | 
+    GROUPBOX        "Gesinnung",IDC_STATIC,7,111,138,30
+    CONTROL         "Zufällig",IDC_PLSEL_ALIGN_RANDOM,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,13,123,40,10
     COMBOBOX        IDC_PLSEL_ALIGN_LIST,63,122,75,45,CBS_DROPDOWNLIST | 
                     WS_VSCROLL | WS_TABSTOP
@@ -191,7 +191,7 @@ END
 
 IDD_NHRIP DIALOGEX 0, 0, 281, 209
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "Here lies..."
+CAPTION "Hier ruht ..."
 FONT 8, "MS Sans Serif"
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,82,188,50,14
@@ -199,7 +199,7 @@ END
 
 IDD_SPLASH DIALOG DISCARDABLE  0, 0, 281, 257
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "Welcome to NetHack"
+CAPTION "Willkommen zu NetHack-De"
 FONT 8, "MS Sans Serif"
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,224,236,50,14
