Pre-Release-Updates

--- a/homepage/src/default.template
+++ b/homepage/src/default.template
@@ -28,6 +28,10 @@
 
       <div id="content">
         {block:}
+
+			  <div id="logo">
+			    <a href="http://sourceforge.net"><img src="http://sflogo.sourceforge.net/sflogo.php?group_id=191550&amp;type=3" width="125" height="37" border="0" alt="SourceForge.net Logo" /></a>
+			  </div>
       </div>
     </div>
 
