--- a/homepage/src/default.template
+++ b/homepage/src/default.template
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="{relocatable: nethack.css}" type="text/css" />
     <link rel="stylesheet" href="{relocatable: default.css}" type="text/css" />
     <link rel="stylesheet" href="{resource: webgen-css}" type="text/css" />
+    <link href='nethack-de-updates.rss' title='RSS 2.0' rel='alternate' type='application/rss+xml'/>
     <title>{htmltitle:}</title>
   </head>
 
