--- a/homepage/src/default.template
+++ b/homepage/src/default.template
@@ -6,12 +6,13 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="description" content="German translation of NetHack" />
     <meta name="keywords" content="nethack, german, deutsch" />
-    <meta name="author" content="Patric Müller - http://bhaak.dyndns.org/" />
+    <meta name="author" content="Patric Mueller - http://bhaak.dyndns.org/" />
     <meta name="generator" content="webgen - http://webgen.rubyforge.org" />
     <link rel="stylesheet" href="{relocatable: nethack.css}" type="text/css" />
     <link rel="stylesheet" href="{relocatable: default.css}" type="text/css" />
     <link rel="stylesheet" href="{resource: webgen-css}" type="text/css" />
     <link href='nethack-de-updates.rss' title='RSS 2.0' rel='alternate' type='application/rss+xml'/>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <title>{htmltitle:}</title>
   </head>
 
@@ -31,7 +32,7 @@
         {block:}
 
 			  <div id="logo">
-			    <a href="http://sourceforge.net"><img src="http://sflogo.sourceforge.net/sflogo.php?group_id=191550&amp;type=3" width="125" height="37" border="0" alt="SourceForge.net Logo" /></a>
+			    <a href="http://sourceforge.net"><img src="http://sflogo.sourceforge.net/sflogo.php?group_id=191550&amp;type=3" width="125" height="37" alt="SourceForge.net Logo" /></a>
 			  </div>
       </div>
     </div>
