--- a/src/Makefile
+++ b/src/Makefile
@@ -151,8 +151,8 @@ GNOMEINC=-I/usr/lib/glib/include -I/usr/lib/gnome-libs/include -I../win/gnome
 # flags for debugging:
 # CFLAGS = -g -I../include
 
-CFLAGS = -Wall -I../include -DGERMAN -g # -fbounds-checking #-fprofile-arcs -ftest-coverage
-LFLAGS =
+CFLAGS = -Wall -I../include -DGERMAN -g #-fbounds-checking #-fprofile-arcs -ftest-coverage
+LFLAGS = #-fbounds-checking
 
 # The Qt and Be window systems are written in C++, while the rest of
 # NetHack is standard C.  If using Qt, uncomment the LINK line here to get
