--- a/sys/unix/Makefile.src
+++ b/sys/unix/Makefile.src
@@ -326,7 +326,8 @@ HACKCSRC = allmain.c alloc.c apply.c artifact.c attrib.c ball.c bones.c \
 	   rnd.c role.c rumors.c save.c shk.c shknam.c sit.c sounds.c sp_lev.c \
 	   spell.c steal.c steed.c teleport.c timeout.c topten.c track.c trap.c \
 	   u_init.c uhitm.c vault.c version.c vision.c weapon.c were.c wield.c \
-	   windows.c wizard.c worm.c worn.c write.c zap.c german.c german_test.c
+	   windows.c wizard.c worm.c worn.c write.c zap.c german.c german_test.c \
+	   livelog.c
 
 # all operating-system-dependent .c (for dependencies and such)
 SYSCSRC = ../sys/atari/tos.c ../sys/share/pcmain.c ../sys/share/pcsys.c \
@@ -383,8 +384,10 @@ HOBJ = monst.o objects.o allmain.o alloc.o apply.o artifact.o attrib.o ball.o \
 	role.o rumors.o save.o shk.o shknam.o sit.o sounds.o sp_lev.o spell.o \
 	steal.o steed.o teleport.o timeout.o topten.o track.o trap.o u_init.o \
 	uhitm.o vault.o vision.o vis_tab.o weapon.o were.o wield.o windows.o \
-	wizard.o worm.o worn.o write.o zap.o german.o german_wishing_test.o german_vocabulary.o \
-	$(RANDOBJ) $(SYSOBJ) $(WINOBJ) version.o
+	wizard.o worm.o worn.o write.o zap.o german.o german_vocabulary.o \
+	$(RANDOBJ) $(SYSOBJ) $(WINOBJ) version.o \
+	livelog.o # german_vocabulary.o
+
 # the .o files from the HACKCSRC, SYSSRC, and WINSRC lists
 
 $(GAME):	$(FIRSTOBJ) $(SYSTEM)
@@ -828,6 +831,7 @@ worm.o: worm.c $(HACK_H) ../include/lev.h
 worn.o: worn.c $(HACK_H)
 write.o: write.c $(HACK_H)
 zap.o: zap.c $(HACK_H)
+livelog.o: livelog.c $(HACK_H)
 # DEPENDENCIES MUST END AT END OF FILE
 # IF YOU PUT STUFF HERE IT WILL GO AWAY
 # see make depend above
