--- a/sys/autoconf/configure.ac
+++ b/sys/autoconf/configure.ac
@@ -256,14 +256,15 @@ AC_CHECK_HEADERS([string.h])
 AC_CHECK_HEADER(regex.h, [have_regex_h=yes],[have_regex_h=no],/* TEST_REGEX */)
 
 dnl ------ Check for data types
+dnl -- Regex-Check for MENU_COLOR
 if test "$have_regex_h" = "yes"; then
   AC_CHECK_TYPE(struct re_pattern_buffer,
-    [AC_DEFINE(USE_REGEX_MATCH, [], [Use regular expressions])
-     AC_DEFINE(GNU_REGEX, [], [GNU regex is available])
+    [AC_DEFINE(MENU_COLOR_REGEX, [], [Use regular expressions])
+     AC_DEFINE(MENU_COLOR_REGEX_GNU, [], [GNU regex is available])
     ],
     [AC_CHECK_TYPE(regex_t,
-      [AC_DEFINE(USE_REGEX_MATCH, [], [Use regular expressions])
-	AC_DEFINE(POSIX_REGEX, [], [Posix regex is available])
+      [AC_DEFINE(MENU_COLOR_REGEX, [], [Use regular expressions])
+	AC_DEFINE(MENU_COLOR_REGEX_POSIX, [], [Posix regex is available])
       ],,
       [AC_INCLUDES_DEFAULT([])
 	#include <regex.h>
