--- a/homepage/src/default.template
+++ b/homepage/src/default.template
@@ -32,7 +32,7 @@
         {block:}
 
 			  <div id="logo">
-			    <a href="http://sourceforge.net"><img src="http://sflogo.sourceforge.net/sflogo.php?group_id=191550&amp;type=3" width="125" height="37" alt="SourceForge.net Logo" /></a>
+			    <a href="http://sourceforge.net/projects/nethack-de"><img src="http://sflogo.sourceforge.net/sflogo.php?group_id=191550&type=11" width="120" height="30" border="0" alt="Get NetHack-De at SourceForge.net. Fast, secure and Free Open Source software downloads" /></a>
 			  </div>
       </div>
     </div>
