Livelog: neue Methoden: livelog_shoplifting und livelog_bones_killed

--- a/sys/autoconf/configure.ac
+++ b/sys/autoconf/configure.ac
@@ -389,6 +389,7 @@ NETHACK_ARG_WITH_PARAM(xlogfile,[More verbose logfile],XLOGFILE,yes,FILE,[xlogfi
 NETHACK_ARG_WITH_PARAM(livelog,[Live game progress logfile],LIVELOGFILE,no,FILE,[livelog])
 if test "$enable_livelog" != "no" ; then
 	NETHACK_ARG(livelog-shout,[Shoutting into the live game logfile],LIVELOG_SHOUT,no)
+	NETHACK_ARG(livelog-bones-killer,[Report killing of ghosts of former player],LIVELOG_BONES_KILLER,yes)
 fi
 
 #NETHACK_ARG(dump,[Dumping character stats],DUMP_LOG,yes)
