--- a/sys/autoconf/configure.ac
+++ b/sys/autoconf/configure.ac
@@ -352,9 +352,9 @@ NETHACK_ARG(tourist,[Tourist class],TOURIST,yes)
 NETHACK_ARG(redo,[Redo last command],REDO,yes)
 NETHACK_ARG(clipping,[Allow smaller screens],CLIPPING,yes)
 NETHACK_ARG(menu-color,[TTY graphics menu color],MENU_COLOR,yes)
-#if test "$enable_tty_graphics" = yes; then
-#NETHACK_ARG(status-color,[TTY graphics status color],STATUS_COLORS,yes)
-#fi
+if test "$enable_tty_graphics" != "no"; then
+NETHACK_ARG(status-color,[TTY graphics status color],STATUS_COLORS,yes)
+fi
 #NETHACK_ARG(auto-open,[Open doors by walking into them],AUTO_OPEN,yes)
 NETHACK_ARG(elbereth,[Engraving the E-word repels monsters],ELBERETH,yes)
 # NETHACK_ARG(noartifactwish,[Prevent wishing for special artifacts],
