german_test: eigene Objektdatei von german.c

--- a/sys/autoconf/Makefile.src
+++ b/sys/autoconf/Makefile.src
@@ -723,9 +723,10 @@ german_vocabulary.c: $(srcdir)/generate_german.rb $(srcdir)/german_verb.rb
 	ruby $(srcdir)/generate_german.rb >$(srcdir)/german_vocabulary.c
 german_vocabulary.o: $(srcdir)/german_vocabulary.c $(srcdir)/../include/german.h
 german.o: $(srcdir)/german.c german_vocabulary.o $(srcdir)/../include/german.h
-german_test: $(srcdir)/german_test.c german.o german_vocabulary.o $(srcdir)/../include/german.h
-	$(CC) -Wall $(CFLAGS) -DWISH_DEBUG -DNO_HACK_H_INCLUDE -c -o german.o $(srcdir)/german.c
-	$(CC) -Wall $(CFLAGS) -DNO_HACK_H_INCLUDE $(srcdir)/german_test.c -lcheck -o german_test german.o german_vocabulary.o
+testgerman.o: $(srcdir)/german.c german_vocabulary.o $(srcdir)/../include/german.h
+	$(CC) -Wall $(CFLAGS) -DWISH_DEBUG -DNO_HACK_H_INCLUDE -c -o testgerman.o $(srcdir)/german.c
+german_test: $(srcdir)/german_test.c testgerman.o german_vocabulary.o $(srcdir)/../include/german.h
+	$(CC) -Wall $(CFLAGS) -DNO_HACK_H_INCLUDE $(srcdir)/german_test.c -lcheck -o german_test testgerman.o german_vocabulary.o
 german_wishing.o: $(srcdir)/german_wishing_test.c $(srcdir)/german.h
 hacklib.o: $(srcdir)/hacklib.c $(HACK_H)
 invent.o: $(srcdir)/invent.c $(HACK_H)
