Homepage update: Kurzhilfe hinzugefuegt

--- a/homepage/Makefile
+++ b/homepage/Makefile
@@ -21,4 +21,10 @@ bestiarium:
 	(cd ../nhtohtml ; ./nhtohtml.pl)
 	ruby bestiarium.rb
 
-.PHONY: webgen archiv sourceforge bestiarium
+kurzhilfe:
+	(cd ../doc ; make Kurzhilfe.pdf Kurzhilfe.html)
+	cp ../doc/Kurzhilfe.pdf output/nethack-de-kurzhilfe.pdf
+	cp ../doc/Kurzhilfe.html output/nethack-de-kurzhilfe.html
+	cp ../doc/Kurzhilfe.css output/
+
+.PHONY: webgen archiv sourceforge bestiarium kurzhilfe
