--- a/sys/autoconf/Makefile.src
+++ b/sys/autoconf/Makefile.src
@@ -437,6 +437,9 @@ spotless: clean
 	-rm -f ../include/filename.h
 	-rm -f Makefile
 
+test: german_test german_vocabulary.c
+	german_test
+
 depend: ../sys/autoconf/depend.awk \
 		$(SYSCSRC) $(WINCSRC) $(WINCXXSRC) $(GENCSRC) $(HACKCSRC)
 	@cp Makefile Makefile.bak
